--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="confirm">确定</string>
     <string name="cancle">取消</string>
 
-    <string name="login_name">请输入账号</string>
+    <string name="login_name">请输入手机号</string>
     <string name="login_pwd">请输入密码</string>
 
 </resources>
